# tic-tac-toe-transform

./: .dockerignore  .gitignore  BUILD_SETUP.md  CLIENT_VALIDATION_SUMMARY.md  CUDA_SETUP_WINDOWS.md  DOCKER_GPU_FIX_SUMMARY.md  DOCKER_GPU_REQUIRED.md  DOCKER_SETUP.md  Dockerfile.client  Dockerfile.server  Dockerfile.server.cpu  FINAL_STATUS.md  GPU_DOCKER_OPTIMIZATION.md  GPU_OPTIMIZATION.md  GPU_POWER_LIMIT_FIX.md  INCREASE_POWER_LIMIT.md  INSTALL_GPU_MANUAL.md  INSTALL_NVIDIA_TOOLKIT_STEPS.md  INSTALL_STATUS.md  LICENSE  MEMORY_FIX_SUMMARY.md  Makefile  OPTIMAL_PARAMETERS.md  QUICK_DOCKER_START.md  QUICK_INSTALL.md  QUICK_WSL2_GPU.md  README.md  RESET_WSL_PASSWORD.md  SET_POWER_LIMIT_HOST.md  TRAINING_SETTINGS_INTEGRATION.md  WSL2_GPU_SETUP.md  check-build-tools.ps1  check-nvidia-docker.sh  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  docker-entrypoint-server.sh  docker-gpu-up.sh  install-build-tools.ps1  install-nvidia-toolkit.sh  (+8 more)
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/gomoku_api/: __init__.py  config.py  main.py
apps/api/src/gomoku_api/models/: __init__.py  schemas.py
apps/api/src/gomoku_api/routers/: __init__.py  engine.py  health.py  training.py
apps/api/src/gomoku_api/services/: __init__.py  engine_adapter.py  train_service.py
apps/api/src/gomoku_api/ws/: __init__.py  arena_eval.py  commentary_service.py  engine_evaluator.py  game_service.py  gpu_info.py  handler.py  model_profiles.py  model_registry.py  offline_gen.py  oracle_backends.py  predict_service.py  promotion.py  rapfi_adapter.py  subprocess_utils.py  train_service_ws.py  training_diagnostics.py  training_run_logger.py  training_worker.py  training_worker_manager.py  user_game_corpus.py
apps/api/tests/: conftest.py  test_arena_eval.py  test_commentary_service.py  test_engine_evaluator_ws.py  test_engine_router.py  test_gpu_info.py  test_model_registry.py  test_oracle_backends.py  test_predict_service.py  test_promotion.py  test_train_service_ws.py  test_training_router.py  test_training_worker.py  test_user_game_corpus.py  test_ws_handler.py
client/: IMPROVEMENTS.md  index.html  package.json  vitest.config.js
docs/: ALPHA_ZERO_INTEGRATION_PLAN.md  GOMOKU_SIZE_CURRICULUM_ARCHITECTURE.md  TRAINING_BASELINES.md  investigation-bot-quality.md
engine-core/: CMakeLists.txt  Dockerfile  README.md  vcpkg.json
engine-core/benchmarks/: bench_search.cpp
engine-core/include/gomoku/: board.hpp  candidates.hpp  config.hpp  engine.hpp  evaluate.hpp  move_ordering.hpp  patterns.hpp  search.hpp  symmetry.hpp  threats.hpp  transposition.hpp  types.hpp  zobrist.hpp
engine-core/src/: board.cpp  candidates.cpp  cli_main.cpp  config.cpp  engine.cpp  evaluate.cpp  move_ordering.cpp  patterns.cpp  search.cpp  symmetry.cpp  threats.cpp  transposition.cpp  zobrist.cpp
engine-core/tests/: test_board.cpp
scripts/: monitor_training_metrics.py  restart-all.js  start-legacy-ui-api.ps1  start-training-metrics-monitor.ps1  stop-all.js  stop-legacy-ui-api.ps1  stop-training-metrics-monitor.ps1
server/: batch_nn_server.mjs  benchmark.mjs  check_gpu_power.mjs  find_optimal_params.mjs  find_optimal_params_quick.mjs  infer_pv_api.mjs  monitor_gpu_power.mjs  package.json  run_train_diag.mjs  server.mjs  service.mjs  stress_test_gpu.mjs  test_ttt5_strength.mjs  (+2 more)
trainer-lab/: Dockerfile.gpu  README.md  pyproject.toml  requirements.txt
trainer-lab/src/trainer_lab/: __init__.py  cli.py  config.py  specs.py
trainer-lab/src/trainer_lab/data/: __init__.py  augmentation.py  dataset.py  encoder.py  policy.py
trainer-lab/src/trainer_lab/evaluation/: __init__.py  eval_script.py
trainer-lab/src/trainer_lab/export/: __init__.py  onnx_export.py
trainer-lab/src/trainer_lab/models/: __init__.py  blocks.py  resnet.py
trainer-lab/src/trainer_lab/self_play/: __init__.py  mixed_replay.py  pipeline.py  player.py  replay_buffer.py
trainer-lab/src/trainer_lab/training/: __init__.py  loss.py  metrics.py  mini_bench.py  scheduler.py  trainer.py
trainer-lab/tests/: test_augmentation.py  test_encoder.py  test_mini_bench.py  test_mixed_replay.py  test_policy_padding.py  test_resnet.py  test_self_play.py  test_variant_spec.py
(+114 files in other folders)
