[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gomoku-api"
version = "0.1.0"
description = "Gomoku Platform API — FastAPI gateway for engine analysis and training"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gomoku_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
